# Datawatcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  api.py  forme.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audits/categorical/: category_frequency_audit.py  category_imbalance_audit.py  rare_category_audit.py
audits/ml/: cardinality_audit.py  class_imbalance_audit.py  identifier_risk_audit.py  leakage_audit.py  target_validation_audit.py
audits/quality/: constant_feature_audit.py  duplicate_audit.py  invalid_value_audit.py  missing_value_audit.py  near_constant_audit.py
audits/statistical/: descriptive_stats_audit.py  kurtosis_audit.py  outlier_audit.py  skewness_audit.py  variance_audit.py
audits/structural/: dtype_audit.py  memory_usage_audit.py  schema_consistency_audit.py  shape_audit.py
cli/: app.py
cli/commands/: audit.py
core/: audit_engine.py  audit_registry.py  audit_result.py  base_audit.py  dataset.py
datawatcher-0.1.0/domains/healthcare/: plugin.py
datawatcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
datawatcher_ml-1.0.0/audits/structural/: schema_consistency_audit.py
datawatcher_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
domains/: base_plugin.py  plugin_registry.py
domains/finance/: plugin.py
domains/finance/audits/: balance_consistency_audit.py  currency_consistency_audit.py  interest_rate_audit.py  negative_value_audit.py
domains/healthcare/audits/: age_range_audit.py  blood_pressure_audit.py  bmi_range_audit.py  heart_rate_audit.py  lab_result_range_audit.py  medication_consistency_audit.py  missing_diagnosis_audit.py
domains/timeseries/: plugin.py
domains/timeseries/audits/: duplicate_timestamp_audit.py  frequency_consistency_audit.py  future_date_audit.py  time_order_audit.py  timestamp_gap_audit.py
loaders/: csv_loader.py  dtype_normalizer.py  factory.py  schema_normalizer.py
reports/reporting/: html_reporter.py  json_reporter.py  pdf_reporter.py  report_builder.py
scoring/: audit_weights.py  readiness_scorer.py  risk_summary.py  severity_scorer.py  severity_weights.py
semantic/: categorical.py  datetime_detector.py  detector.py  identifier.py  text_detector.py
tests/: __init__.py  test_api.py  test_audits.py  test_datawatcher.py
tests/fixtures/: sample_clean.csv  sample_dirty.csv
utils/: percentages.py  recommendations.py  severity.py  thresholds.py
