[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawatcher-ml"
version = "0.1.0"
description = "Production-grade dataset auditing and ML readiness scoring library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "data quality",
    "machine learning",
    "data auditing",
    "dataset validation",
    "ML readiness",
    "data profiling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
datawatcher = "datawatcher.cli.app:app"

[project.urls]
Homepage = "https://github.com/ranjeet3102/datawatcher"
Repository = "https://github.com/ranjeet3102/datawatcher"
Issues = "https://github.com/ranjeet3102/datawatcher/issues"

# The project root IS the datawatcher package directory.
# We tell setuptools to look one level up (the parent of this folder)
# so it can find `datawatcher` as a named package.
[tool.setuptools]
package-dir = {"datawatcher" = "."}

[tool.setuptools.packages]
find = {where = [".."], include = ["datawatcher*"]}

[tool.setuptools.package-data]
"datawatcher" = ["py.typed"]
