[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawatcher-ml"
version = "0.1.5"
description = "Production-grade dataset auditing and ML readiness scoring library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "data quality",
    "machine learning",
    "data auditing",
    "dataset validation",
    "ML readiness",
    "data profiling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pdf = [
    "reportlab>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
datawatcher = "datawatcher.cli.app:app"

[project.urls]
Homepage = "https://github.com/ranjeet3102/datawatcher"
Repository = "https://github.com/ranjeet3102/datawatcher"
Issues = "https://github.com/ranjeet3102/datawatcher/issues"

# Explicit package list — required because the project root IS the package.
# Using find-packages here fails silently; explicit listing ensures the wheel
# actually copies all source files.
[tool.setuptools]
packages = [
    "datawatcher",
    "datawatcher.audits",
    "datawatcher.audits.categorical",
    "datawatcher.audits.ml",
    "datawatcher.audits.quality",
    "datawatcher.audits.statistical",
    "datawatcher.audits.structural",
    "datawatcher.cli",
    "datawatcher.cli.commands",
    "datawatcher.core",
    "datawatcher.domains",
    "datawatcher.domains.finance",
    "datawatcher.domains.finance.audits",
    "datawatcher.domains.healthcare",
    "datawatcher.domains.healthcare.audits",
    "datawatcher.domains.timeseries",
    "datawatcher.domains.timeseries.audits",
    "datawatcher.loaders",
    "datawatcher.reports",
    "datawatcher.reports.reporting",
    "datawatcher.scoring",
    "datawatcher.semantic",
    "datawatcher.utils",
]

# Map each package name to its directory relative to the project root (.)
[tool.setuptools.package-dir]
datawatcher                          = "."
"datawatcher.audits"                 = "audits"
"datawatcher.audits.categorical"     = "audits/categorical"
"datawatcher.audits.ml"              = "audits/ml"
"datawatcher.audits.quality"         = "audits/quality"
"datawatcher.audits.statistical"     = "audits/statistical"
"datawatcher.audits.structural"      = "audits/structural"
"datawatcher.cli"                    = "cli"
"datawatcher.cli.commands"           = "cli/commands"
"datawatcher.core"                   = "core"
"datawatcher.domains"                = "domains"
"datawatcher.domains.finance"        = "domains/finance"
"datawatcher.domains.finance.audits" = "domains/finance/audits"
"datawatcher.domains.healthcare"              = "domains/healthcare"
"datawatcher.domains.healthcare.audits"       = "domains/healthcare/audits"
"datawatcher.domains.timeseries"              = "domains/timeseries"
"datawatcher.domains.timeseries.audits"       = "domains/timeseries/audits"
"datawatcher.loaders"                = "loaders"
"datawatcher.reports"                = "reports"
"datawatcher.reports.reporting"      = "reports/reporting"
"datawatcher.scoring"                = "scoring"
"datawatcher.semantic"               = "semantic"
"datawatcher.utils"                  = "utils"

[tool.setuptools.package-data]
"datawatcher" = ["py.typed"]
